--- a/web/index.html
+++ b/web/index.html
@@ -94,6 +94,7 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/toon.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
